# rl-stats-companion

./: .gitignore  AGENTS.md  CHANGELOG.md  DESIGN.md  LICENSE  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  skills-lock.json  trainings.json  vite.config.ts
docs/: CHANGELOG.md  (+13 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  overlay.json
src-tauri/icons/: icon.icns
src-tauri/overlays/: all-in-one.html  enhanced.html  event-feed.html  index.html  player-stats.html  rl-overlay-sdk.js  scoreboard.html
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: analytics.rs  detect.rs  friends.rs  history.rs  live.rs  mmr.rs  mod.rs  overlay.rs  overlay_window.rs  players.rs  presets.rs  profiles.rs  rlstats.rs  settings.rs  tracker.rs  window.rs
src-tauri/src/core/: autostart.rs  mod.rs  obs_text.rs  process_watcher.rs
src-tauri/src/core/ingestor/: mod.rs
src-tauri/src/core/metrics/: mod.rs  streak.rs
src-tauri/src/core/mmr/: mod.rs
src-tauri/src/core/models/: mod.rs
src-tauri/src/core/overlay/: mod.rs
src-tauri/src/core/parser/: mod.rs
src-tauri/src/core/profiles/: mod.rs
src-tauri/src/core/rlstats_api/: client.rs  mod.rs  parser.rs
src-tauri/src/core/session/: mod.rs
src-tauri/src/core/settings/: mod.rs
src-tauri/src/core/storage/: migrations.rs  mod.rs
src-tauri/src/core/tracker_api/: client.rs  mod.rs  models.rs
src-tauri/src/updater/: mod.rs
src-tauri/tests/: integration_test.rs
src-tauri/tests/fixtures/: full_match.jsonl  malformed_events.jsonl  short_match.jsonl
(+188 files in other folders)
